cra-frontend/src/index.css
/* CYAN #1DBEB4 */
/* GRIS OSCURO #383B58 */
/* GRIS CLARO #545776 */
/* BLANCO #F3F1ED */

* {
  font-family: "Quicksand", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* HEADER */

/* Burger button hider */
#check,
.burgerButton,
.checkbtn {
  display: none;
}

.divBurger {
  display: inline-block;
  position: absolute;
  right: 20px;
  z-index: 2;
}

header {
  background-color: white;
  position: sticky;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 25px;
  z-index: 1;
  position: sticky;
  top: 0;
}

header section {
  width: 50%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

a.logo-link {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  font-family: "Roboto";
  font-style: italic;
  font-weight: 300;
  font-size: 20px;
  color: black;
  text-decoration: none;
}

.header-button {
  color: #1dbeb4;
  font-weight: bold;
  background-color: white;
  border: 2px solid #1dbeb4;
  border-radius: 5px;
  box-sizing: content-box;
  padding: 10px 20px;
  text-decoration: none;
}

.loggedUserBlock {
  color: #545776;
  display: flex;
  justify-content: space-around;
  font-weight: bold;
  text-decoration: none;
}

.loggedUserBlock .userName {
  color: #1dbeb4;
}

.user-logo {
  font-size: 1.5em;
  color: white;
  border-radius: 50%;
  padding: 5px;
  margin: auto 10px;
  background-color: #545776;
}

/* SEARCHBAR */
.searchBar {
  width: 100%;
  background-color: #545776;
  height: 150px;
  padding: 20px;
  gap: 20px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.searchBar h1 {
  font-size: 2em;
  color: white;
}

form {
  width: 80%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.formItem {
  height: 40px;
  flex-grow: 0.3;
}

.searchBarFormInput,
.searchBarFormButton {
  width: 100%;
  height: 100%;
  border: none;
  border-radius: 5px;
  box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
}

.dropdown {
  display: flex;
  align-items: center;
  border: none;
  border-radius: 5px;
  box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
  -webkit-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 1px 0px 10px 0px rgba(0, 0, 0, 0.3);
  font-weight: bold;
  background-color: white;
  border: none;
  position: relative;
}

.searchBarForm h2 {
  font-size: 1em;
  margin: auto;
  color: grey;
  user-select: none
}

.citiesList {
  position: absolute;
  top: 50px;
  display: none;
  width: 100%;
}

.citiesListShow {
  display: block;
}

.city {
  display: flex;
  align-items: center;
  padding-left: 10px;
  height: 40px;
  font-weight: bold;
  background-color: white;
  border: 1px solid grey;
  border-top: none;
}

.city:hover {
  background-color: #545776;
  color: #f3f1ed;
}

.dateRangeInputShow {
  display: block;
}

.dateRangeInputHide {
  display: none;
}

.dateRangeInput {
  width: 50%;
  position: absolute;
  left: 0;
  right: 0;
  margin: 10px auto;
  outline: 1px solid #383B58;
  background: white;
}

.rdrMonths,
.rdrMonthsHorizontal {
  justify-content: space-around;
}

form button {
  color: white;
  font-weight: bold;
  background-color: #1dbeb4;
  border: none;
}

/* CATEGORIES */
section.categories {
  background-color: white;
  padding: 30px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 30px;
}

section.categories div.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 30px;
}

.category {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border: 1px solid black;
  width: 310px;
  height: 283px;
  border-radius: 10px;
}

.categoryInfo {
  width: 100%;
  height: 100%;
  padding-left: 10px;
}

.category img {
  display: inline-block;
  margin: 0;
  width: 100%;
  height: 80%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

/* RECOMMENDATIONS */
.recommendations {
  background-color: #f3f1ed;
  padding: 30px;
}

.recommendations div.container {
  padding: 30px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 30px;
}

.card {
  display: flex;
  justify-content: space-around;
  border: 1px solid black;
  width: 635px;
  height: 283px;
  border-radius: 10px;
}

.card div {
  width: 50%;
  height: 100%;
}

.card img {
  display: inline-block;
  margin: auto;
  width: 100%;
  height: 100%;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.card div:nth-child(2) {
  margin: auto;
  display: flex;
  text-align: center;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.product-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.card .moreInfo {
  margin: auto;
  margin-bottom: 10px;
  color: #f3f1ed;
  background-color: #1dbeb4;
  padding: 10px;
  width: 80%;
  border: none;
  border-radius: 10px;
}

/* FOOTER */
footer {
  width: 100%;
  color: #f3f1ed;
  background-color: #1dbeb4;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  bottom: 0;
  padding: 0 10px;
}

.socialMediaIcon {
  width: 20px;
  height: 20px;
  margin: 5px;
}

footer section span {
  padding-left: 30px;
}

/* PC SMALL */
@media (max-width: 1024px) {
  .header-placeholder {
    display: none;
  }

  .searchBar form {
    width: 100%;
  }
}

/* TABLET */
@media (max-width: 768px) {

  /* TABLET HEADER */
  .logo-container {
    justify-content: flex-start;
  }

  .header-placeholder {
    display: none;
  }

  a.logo-link .slogan {
    display: none;
  }

  section.user-buttons {
    justify-content: space-between;
  }

  /* TABLET SEARCHBAR */
  .searchBar h1 {
    font-size: 1.5em;
  }

  .dateRangeInput {
    width: 80%;
  }

  /* TABLET FOOTER */
  footer {
    height: 50px;
  }
}

/* MOBILE */
@media (max-width: 414px) {

  .user-buttons,
  .slogan,
  .socialMediaIcon {
    display: none;
  }

  /* MOBILE BURGER */
  .burgerButton {
    font-size: 30px;
    color: black;
    float: right;
    margin-right: 15px;
    cursor: pointer;
    display: block;
  }

  .user-buttons-open {
    position: fixed;
    height: 100vh;
    width: 50%;
    padding-top: 102px;
    top: 0px;
    right: 0px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    background-color: #f3f1ed;

    box-shadow: 1px -1px 28px 9px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 1px -1px 28px 9px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 1px -1px 28px 9px rgba(0, 0, 0, 0.75);
  }

  .user-buttons-open a {
    color: #1dbeb4;
    font-weight: bold;
    background-color: #f3f1ed;
    border: 2px solid #1dbeb4;
    border-radius: 5px;
    padding: 10px 50px;
    margin: 10px;
  }

  /* MOBILE HEADER */
  .logo {
    justify-content: space-between;
  }

  header section.logo {
    flex-grow: 6;
    color: #545776;
    display: flex;
    align-items: center;
    padding: 15px 20px;
  }

  /* MOBILE SEARCHBAR */
  .searchBar {
    height: auto;
  }

  .searchBar form {
    width: 100%;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    gap: 10px;
  }

  .formItem {
    width: 100%;
  }

  .searchBar button {
    padding: 0px;
  }
}

